@@ -8,6 +8,9 @@ Revision history for Fatal
 	  to regenerate the same code every single time Fatal/autodie
 	  is used on the same function.
 
+	* Nuking subroutines at end of lexical scope moved into
+	  own subroutine.
+
 1.10_04 Sat Jun 14 15:02:17 AUSEST 2008
 	* Made all $VERSION numbers more friendly to static code
 	  analysis tools (including CPAN).
